k8sdeploy/ingress-helloworld.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-net
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - helloworld.net
    secretName: tls-cert
  rules:
  - host: helloworld.net
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld
          servicePort: 80
